manifests/config-map.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-api-authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-api-authservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: dashboard-api-authservice
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: dashboard-api-authservice
        image: azurecontainerlord.azurecr.io/dashboard-api-authservice:${BUILD_TAG}
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-api-authservice
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: dashboard-api-authservice
